# terminal_emulator

./: BUG_REPORT_TEMPLATE.md  CLAUDE.md  COMPLETE_ALIGNMENT.md  COMPLETE_REPORT.md  COMPLETION_SUMMARY.md  Cargo.toml  DIAGNOSTIC_GUIDE.md  FINAL_REPORT.md  FONT_RENDERING_COMPARISON.md  GPU_RENDERING_OPTIMIZATION.md  IMPROVEMENTS.md  KEYBINDINGS.md  OPTIMIZATION_SUMMARY.md  PHASE1_COMPLETION.md  PHASE1_TEST_GUIDE.md  PHASE_COMPLETION_REPORT.md  SCROLLING_FIX.md  UPGRADE_PROGRESS.md  debug_vim_test.sh  monitor.sh  run_diagnostic.sh  test_features.sh  test_scroll_logic.sh  test_vim_debug.sh  test_vim_scroll.sh  vim_scroll_test.sh
src/: ansi_advanced.rs  char_width.rs  clipboard.rs  color.rs  command_palette.rs  completion.rs  config.rs  config_panel.rs  debug.rs  debug_panel.rs  glyph_cache.rs  help.rs  image_cache.rs  keybindings.rs  kitty_graphics.rs  layout.rs  lib.rs  link.rs  main.rs  pty.rs  scripting.rs  search.rs  search_replace.rs  session.rs  session_manager.rs  session_persistence.rs  shell.rs  sidebar.rs  terminal.rs  theme.rs  ui.rs  windows_compat.rs
src/gpu/: ab_glyph_backend.rs  atlas.rs  callback.rs  font_backend.rs  fontdue_backend.rs  instance.rs  mod.rs  pipeline.rs  shader.wgsl
