[package]
name = "terminal_emulator"
version = "0.2.0"
edition = "2024"

[dependencies]
libc = "0.2"
log = "0.4"
crossbeam = "0.8"
parking_lot = "0.12"
anyhow = "1.0"
egui = "0.34.1"
eframe = "0.34.1"
vte = "0.15.0"
wgpu = "29.0.1"
winit = "0.30.13"

[target.'cfg(not(windows))'.dependencies]
x11-clipboard = "0.9"

[target.'cfg(windows)'.dependencies]
clipboard-win = "5.4"
