[package]
name = "terminal_emulator"
version = "0.4.0"
edition = "2021"

[dependencies]
libc = "0.2"
log = "0.4"
env_logger = "0.11"
crossbeam = "0.8"
parking_lot = "0.12"
anyhow = "1.0"
egui = "0.34.1"
eframe = "0.34.1"
vte = "0.15.0"
wgpu = "29.0.1"
winit = "0.30.13"
tokio = { version = "1.36", features = ["full"] }
unicode-width = "0.2"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10"
serde_json = "1.0"
fuzzy-matcher = "0.3"
base64 = "0.22"
image = "0.25"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["process"] }
x11-clipboard = "0.9"

[target.'cfg(windows)'.dependencies]
clipboard-win = "5.4"
winpty = "0.1"
